--- a/highnote.Rmd
+++ b/highnote.Rmd
@@ -19,7 +19,7 @@ When you click the **Knit** button a document will be generated that includes bo
 summary(cars)
 ```
 
-## Including Plots
+# Including Plots
 
 You can also embed plots, for example:
 
@@ -34,7 +34,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 
 #read the csv into R
-```{r}
+```r
 dt<-read.csv("C:/Users/Administrator/Desktop/uci/winter/web&social/midterm/HighNote.csv", header = TRUE)
 head(dt)
 summary(dt)
@@ -42,7 +42,7 @@ summary(dt)
 
 #Summary statistics
 #the differences in the mean values of the variables, comparing the adopter and non-adapter subsamples
-```{r}
+```r
 library(dplyr)
 #dropping id from the data
 dt2<-dt[,-1]
@@ -53,7 +53,7 @@ mean_adop<-dt2%>%group_by(dt2$adopter)%>%summarise_all("mean")
 print(mean_adop)
 ```
 # Descriptive statistics
-```{r}
+```r
 library(psych)
 
 describeBy(dt2,group = dt2$adopter)
@@ -64,16 +64,19 @@ describeBy(dt2,group = dt2$adopter)
 
 
 
-#the adopter group subscribers on avearage are( switched from Free to Fee) older, have more male, more friends with avearge friends age is larger than non-adopter group. Also, the adopter subscribers have hgiher proportion of male friends and more diverse friend and higher percentage of friends who are also adopters. 
-# therefore, peer influence and user engagement may affect users’ decisions to pay for a premium subscription.
-#Also, adopters are more engeaged with larger number of songs listened and more posts, playlists and shouts. 
-# what is more, HighNote has fewer users in US,UK and Germany than other countries. 
+the adopter group subscribers on avearage are( switched from Free to Fee) older, have more male, more friends with avearge friends age is larger than non-adopter group. Also, the adopter subscribers have hgiher proportion of male friends and more diverse friend and higher percentage of friends who are also adopters.
+
+therefore, peer influence and user engagement may affect users’ decisions to pay for a premium subscription.
+
+Also, adopters are more engeaged with larger number of songs listened and more posts, playlists and shouts.
+
+what is more, HighNote has fewer users in US,UK and Germany than other countries. 
 
 
 
 
-# visualize how adopters and non-adopters (of the premium subscription service) differ from each other in terms of (i) demographics, (ii) peer influence, and (iii) user engagement. 
-```{r}
+## visualize how adopters and non-adopters (of the premium subscription service) differ from each other in terms of (i) demographics, (ii) peer influence, and (iii) user engagement. 
+```r
 library(ggplot2)
 
 # Demorgraphic difference
@@ -94,13 +97,12 @@ ggplot(dt2,aes(x=factor(adopter),fill=factor(good_country)))+
   ggtitle("Country VS Adopters")+xlab("Adopters")+ylab("Count")
 par(demo_graph)
 
-
-# As it shown on the graph below, adopters are more males, are older than non-adopters and more come from countries other than US, UK and Germany.
+## As it shown on the graph below, adopters are more males, are older than non-adopters and more come from countries other than US, UK and Germany.
 ```
 
 
 
-```{r}
+```r
 #Visualize peer influence
 #number of friends
 peer_graph<-par(mfrow=c(1,2)) 
@@ -119,8 +121,8 @@ par(peer_graph)
 #Adopters have more friends and they have more friends who are premium subscribers. Therefore, there might have peer influence exists. 
 ```
 
-#Engagement level data on activities performed when using the service, which include the number of songs the user has listened to, playlists created, “shouts” sent to friends, etc.
-```{r}
+## Engagement level data on activities performed when using the service, which include the number of songs the user has listened to, playlists created, “shouts” sent to friends, etc.
+```r
 #visualize user engagement
 #number of songs listened to
 par(myfrow=c(2,3))
@@ -158,8 +160,8 @@ ggplot(mean_adop,aes(x=factor(adopter), tenure,fill=factor(adopter)))+
 
 #premium users on average have more songs listened, more tracks, posts, playlists,shouts than free users. Therefore, premium users might  be more engaged or more engaged users are more likely to be premium users. 
 ```
-#Propensity score matching
-```{r}
+## Propensity score matching
+```r
 #test whether having susbscriber friends affects the likelihood of becoming an adopter
 dt2$test[dt$subscriber_friend_cnt=="0"]<-0
 dt2$test[dt$subscriber_friend_cnt!="0"]<-1
@@ -167,17 +169,15 @@ library(MatchIt)
 library(dplyr)
 ```
 
-```{r}
+```r
 dt2%>%group_by(test)%>%
   summarise(mean_adopter=mean(adopter))
 with(dt2,t.test(adopter~test))
 ```
-```{r}
-
-```
 
 
-#calculate the mean for each covariate by the 
+
+## calculate the mean for each covariate by the 
 ```{r}
 
 
@@ -225,20 +225,20 @@ prs_df %>%
 
 
 #Executing a matching alogorithm
-```{r}
+```r
 mod_match<-matchit(test~age+friend_cnt+avg_friend_age+avg_friend_male+friend_country_cnt+songsListened+lovedTracks+posts+playlists+shouts+adopter+tenure+good_country,method="nearest",data=dt2)
 
 
 plot(mod_match)
 ```
 #creat a dataframe containing only the matched observations
-```{r}
+```r
 dta_m<-match.data(mod_match)
 dim(dta_m)
 ```
 
 #Inspection: difference-in-means
-```{r}
+``` r
 HN_cov<-c("age","friend_cnt","avg_friend_age","avg_friend_male","friend_country_cnt","songsListened","lovedTracks","posts","playlists","shouts","adopter","tenure","good_country")
 dta_m %>%
   group_by(test) %>%
@@ -249,7 +249,7 @@ dta_m %>%
 
 
 
-```{r}
+```r
 lapply(HN_cov, function(v) {
     t.test(dta_m[, v] ~ dta_m$test)
 })
@@ -264,11 +264,11 @@ with(dta_m,t.test(adopter~test))
 ```
 
 
-```{r}
+```r
 glm_treat2 <- glm(adopter ~ test+age+friend_cnt+avg_friend_age+avg_friend_male+friend_country_cnt+songsListened+lovedTracks+posts+playlists+shouts+adopter+tenure+good_country, family=binomial, data = dta_m)
 summary(glm_treat2)
 ```
-```{r}
+```r
 print(exp(glm_treat2$coefficients[1:14]))
 ```
 
@@ -280,7 +280,7 @@ print(exp(glm_treat2$coefficients[1:14]))
 
 
 #Regression for the model
-```{r}
+```r
 #based on the visualization in part 2, variables to be included in the model could be:
 reg_val<-c( "male","subscriber_friend_cnt","good_country","friend_cnt","avg_friend_age","friend_country_cnt","songsListened","lovedTracks","posts","playlists","shouts","adopter")
 
@@ -292,27 +292,33 @@ summary(fit.glm)
 
 #odds ratio
 
-```{r}
+```r
 print(exp(fit.glm$coefficients[1:12]))
 
 
 ```
 
-# 1 unit increase in "male" (which is male) increases the odd of switching to Fee user by a factor of 1.56
+1 unit increase in "male" (which is male) increases the odd of switching to Fee user by a factor of 1.56
 
-# 1 unit increase in "good_country" (which is users from US, UK and Germany) decreases the odd of switching to Fee user by a factor of 0.66
+1 unit increase in "good_country" (which is users from US, UK and Germany) decreases the odd of switching to Fee user by a factor of 0.66
 
-# 1 unit increase in "subscriber_friend_cnt" (which is users have one or more subscriber friends) increases the odd of switching to Fee user by a factor of 1.56
+1 unit increase in "subscriber_friend_cnt" (which is users have one or more subscriber friends) increases the odd of switching to Fee user by a factor of 1.56
 
-# 1 unit increase in "friend_cnt" decreases the odd of switching to Fee user by a factor of 1.1
-# 1 unit increase in "average_friend_age" increases the odd of switching to Fee user by a factor of 1.04
+1 unit increase in "friend_cnt" decreases the odd of switching to Fee user by a factor of 1.1
 
-# 1 unit increase in "friend_country_cnt" increases the odd of switching to Fee user by a factor of 1.04
-# 1 unit increase in "songsListened" increases the odd of switching to Fee user by a factor of 1
-# 1 unit increase in "lovedTracks" increases the odd of switching to Fee user by a factor of 1
-# 1 unit increase in "posts" increases the odd of switching to Fee user by a factor of 1
-# 1 unit increase in "playlists" increases the odd of switching to Fee user by a factor of 1.1
-# 1 unit increase in "shouts" increases the odd of switching to Fee user by a factor of 1
+1 unit increase in "average_friend_age" increases the odd of switching to Fee user by a factor of 1.04
+
+1 unit increase in "friend_country_cnt" increases the odd of switching to Fee user by a factor of 1.04
+
+1 unit increase in "songsListened" increases the odd of switching to Fee user by a factor of 1
+
+1 unit increase in "lovedTracks" increases the odd of switching to Fee user by a factor of 1
+
+1 unit increase in "posts" increases the odd of switching to Fee user by a factor of 1
+
+1 unit increase in "playlists" increases the odd of switching to Fee user by a factor of 1.1
+
+1 unit increase in "shouts" increases the odd of switching to Fee user by a factor of 1
 
 
 
